--- a/RestFullApiTest/appsettings.json
+++ b/RestFullApiTest/appsettings.json
@@ -1,9 +1,29 @@
 {
-    "Logging": {
-        "LogLevel": {
+    "Serilog": {
+        "MinimumLevel": {
             "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
+            "Override": {
+                "Microsoft": "Warning",
+                "System": "Warning"
+            }
+        },
+        "Enrich": [ "FromLogContext" ],
+        "WriteTo": [
+            {
+                "Name": "File",
+                "Args": {
+                    "path": "Logs/log.txt",
+                    "rollingInterval": "Day"
+                }
+            },
+            {
+                "Name": "SQLite",
+                "Args": {
+                    "connectionString": "Data Source=Logs/logs.db",
+                    "tableName": "Logs"
+                }
+            }
+        ]
     },
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=./test.db"
