--- a/RestFullApiTest/appsettings.json
+++ b/RestFullApiTest/appsettings.json
@@ -25,6 +25,12 @@
             }
         ]
     },
+    "Jwt": {
+        "Key": "siemaTuAdrian256_kluczTajnyZGnieznaiOkolic",
+        "Issuer": "RestFullApiTest",
+        "Audience": "RestFullApiTestClient",
+        "ExpireMinutes": 60
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Data Source=./test.db"
     },
