--- a/RestFullApiTest/RestFullApiTest.csproj
+++ b/RestFullApiTest/RestFullApiTest.csproj
@@ -31,4 +31,8 @@
     </Resource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\RefreshToken\Queries\" />
+  </ItemGroup>
+
 </Project>
