--- a/AplikacjaAndroid/Platforms/Android/AndroidManifest.xml
+++ b/AplikacjaAndroid/Platforms/Android/AndroidManifest.xml
@@ -1,6 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
-	<application android:allowBackup="true" android:icon="@mipmap/appicon" android:roundIcon="@mipmap/appicon_round" android:supportsRtl="true"></application>
+	<application android:allowBackup="true" 
+				 android:icon="@mipmap/appicon" 
+				 android:roundIcon="@mipmap/appicon_round" 
+				 android:supportsRtl="true" 
+				 android:largeHeap="true" 
+				 android:hardwareAccelerated="true"
+				 android:vmSafeMode="true"></application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 	<uses-permission android:name="android.permission.INTERNET" />
+	<meta-data android:name="mono.gc" android:value="sgen" />
+	<meta-data android:name="mono.gc.params" android:value="nursery-size=64m,major=marksweep-conc" />
 </manifest>
